# regenny

./: .gitignore  .mcp.json  AGENT.md  ATTRIBUTIONS.md  CMakeLists.txt  LICENSE  README.md  cmake.toml  format.ps1  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
examples/: CMakeLists.txt  test.lua  test0.cpp  test0.genny  types.genny
extras/dumpmapper/: main.py  requirements.txt
mcp-server/: Http.cs  McpServer.csproj  Program.cs  Tools.cs
registry/ports/sdkgenny/: portfile.cmake  vcpkg.json
registry/versions/: baseline.json
registry/versions/s-/: sdkgenny.json
src/: AboutUi.cpp  AboutUi.hpp  Api.cpp  Api.hpp  Config.cpp  Config.hpp  Genny.hpp  GennyParser.hpp  Helpers.hpp  LoggerUi.cpp  LoggerUi.hpp  Main.cpp  MemoryUi.cpp  MemoryUi.hpp  Module.hpp  Process.cpp  Process.hpp  Project.cpp  Project.hpp  ReGenny.cpp  ReGenny.hpp  Utility.cpp  Utility.hpp
src/arch/: Arch.cpp  Arch.hpp  Linux.cpp  Linux.hpp  Windows.cpp  Windows.hpp  Windows.rc
src/arch/mac/: Mac.cpp  Mac.hpp
src/arch/win/: Windows.cpp  Windows.rc
src/node/: Array.cpp  Array.hpp  Base.cpp  Base.hpp  Bitfield.cpp  Bitfield.hpp  Pointer.cpp  Pointer.hpp  Property.hpp  Struct.cpp  Struct.hpp  Undefined.cpp  Undefined.hpp  UndefinedBitfield.cpp  UndefinedBitfield.hpp  Variable.cpp  Variable.hpp
